[package]
name = "rustyrender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
num-complex = "0.4.0"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = "0.4.14"