[package]
name = "rustyrender"
version = "0.1.0"
authors = ["Brian Ronan <bpronan@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
image = "0.23.14"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = "0.4.14"
time = "*"
thiserror = "1.0.30"
anyhow = "1.0.51"
docopt = "1.1.1"
rayon = "1.5"
typetag = "0.1"
